--- a/templates/base.html
+++ b/templates/base.html
@@ -51,16 +51,16 @@
 <body>
     <div class="sidebar">
         {% if 'user_id' in session %}
-            <a href="{{ url_for('dashboard') }}">Dashboard</a>
-            <a href="{{ url_for('logout') }}">Logout</a>
+            <a href="{{ url_for('dashboard') }}">Painel</a>
+            <a href="{{ url_for('logout') }}">Deslogar</a>
         {% else %}
-            <a href="{{ url_for('login') }}">Login</a>
-            <a href="{{ url_for('register') }}">Register</a>
+            <a href="{{ url_for('login') }}">Entrar</a>
+            <a href="{{ url_for('register') }}">Registar</a>
         {% endif %}
     </div>
     <div class="content">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="{{ url_for('index') }}">Task Manager</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">Gerenciador de Tarefas</a>
         </nav>
         <div class="container mt-4">
             {% block content %}{% endblock %}
