--- a/templates/login.html
+++ b/templates/login.html
@@ -6,19 +6,19 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4>Login</h4>
+                    <h4>Entrar</h4>
                 </div>
                 <div class="card-body">
                     <form method="POST">
                         <div class="form-group">
-                            <label for="username">Username</label>
+                            <label for="username">Nome</label>
                             <input type="text" class="form-control" id="username" name="username" required>
                         </div>
                         <div class="form-group">
-                            <label for="password">Password</label>
+                            <label for="password">Senha</label>
                             <input type="password" class="form-control" id="password" name="password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-primary">Entrar</button>
                     </form>
                 </div>
             </div>
