--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4>Register</h4>
+                    <h4>Registrar</h4>
                 </div>
                 <div class="card-body">
                     <!-- Mensagens de erro -->
@@ -25,14 +25,14 @@
 
                     <form method="POST">
                         <div class="form-group">
-                            <label for="username">Username</label>
+                            <label for="username">Nome</label>
                             <input type="text" class="form-control" id="username" name="username" required>
                         </div>
                         <div class="form-group">
-                            <label for="password">Password</label>
+                            <label for="password">Senha</label>
                             <input type="password" class="form-control" id="password" name="password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Register</button>
+                        <button type="submit" class="btn btn-primary">Registrar</button>
                     </form>
                 </div>
             </div>
